--- a/src/app/pages/higher-ed/higher-ed.hbs
+++ b/src/app/pages/higher-ed/higher-ed.hbs
@@ -4,67 +4,69 @@
 <div class="higher-ed-page page">
     <main id="maincontent">
         <div class="hero">
-            <div class="container">
-                <img class="student" src="/images/higher-ed/student.png" />
+            <div class="container-wrap">
+                <div class="student"></div>
+                <div class="overlay">
+                    <div class="text-block">
+                        <h1 class="header">Here is the first song off our new album.</h1>
+                        <div class="blurb">
+                            Some of the most valuable investments don't have a price tag.
+                            Neither do our textbooks. Our free, high-quality textbooks and
+                            learning technology give students the tools they need to
+                            succeed without having to weigh the cost.
+                        </div>
+                    </div>
+                </div>
             </div>
             <div class="square-1"></div>
             <div class="square-2"></div>
-            <div class="overlay">
-                <div class="text-block">
-                    <h1 class="header">Here is the first song off our new album.</h1>
-                    <div class="blurb">
-                        Some of the most valuable investments don't have a price tag.
-                        Neither do our textbooks. Our free, high-quality textbooks and
-                        learning technology give students the tools they need to
-                        succeed without having to weigh the cost.
-                    </div>
-                </div>
-            </div>
         </div>
         <span class="scrolldown-chevron"><a href="#getting-started"><i class="fa fa-chevron-down"></i></a></span>
         <div id="getting-started" class="getting-started">
-            <div class="header">Getting Started</div>
-            <ol class="steps">
-                <li class="numbered step">
-                    <div class="title">Review a Textbook</div>
-                    <div class="blurb">
-                        The entire contents of our free textbooks are
-                        available online. Review a book or chapter and see
-                        the quality for yourself.
-                    </div>
-                    <div class="more"><a href="/subjects">View Books</a></div>
-                </li>
+            <div class="container">
+                <div class="header">Getting Started</div>
+                <ol class="steps">
+                    <li class="numbered step">
+                        <div class="title">Review a Textbook</div>
+                        <div class="blurb">
+                            The entire contents of our free textbooks are
+                            available online. Review a book or chapter and see
+                            the quality for yourself.
+                        </div>
+                        <div class="more"><a href="/subjects">View Books</a></div>
+                    </li>
 
-                <li class="numbered step">
-                    <div class="title">Create a Faculty Account</div>
-                    <div class="blurb">
-                        We provide additional free instructor-only resources
-                        like test banks and solution manuals to plan your
-                        course.
-                    </div>
-                    <div class="more"><a class="login-link">Create Account</a></div>
-                </li>
+                    <li class="numbered step">
+                        <div class="title">Create a Faculty Account</div>
+                        <div class="blurb">
+                            We provide additional free instructor-only resources
+                            like test banks and solution manuals to plan your
+                            course.
+                        </div>
+                        <div class="more"><a class="login-link">Create Account</a></div>
+                    </li>
 
-                <li class="numbered step">
-                    <div class="title">Adopt a Textbook</div>
-                    <div class="blurb">
-                        Access to our textbooks is completely free. Let us
-                        know you've adopted, and share our URL with your
-                        students! You can also recommend a book as an
-                        optional extra resource.
-                    </div>
-                    <div class="more"><a href="/adoption">Adopt</a></div>
-                </li>
-            </ol>
+                    <li class="numbered step">
+                        <div class="title">Adopt a Textbook</div>
+                        <div class="blurb">
+                            Access to our textbooks is completely free. Let us
+                            know you've adopted, and share our URL with your
+                            students! You can also recommend a book as an
+                            optional extra resource.
+                        </div>
+                        <div class="more"><a href="/adoption">Adopt</a></div>
+                    </li>
+                </ol>
 
-            <div class="step">
-                <div class="title">Adopt as an Institution</div>
-                <div class="blurb">
-                    If you are an administrator interested in driving adoptions
-                    of OpenStax textbooks at your institution, we are here to
-                    support you!
+                <div class="step">
+                    <div class="title">Adopt as an Institution</div>
+                    <div class="blurb">
+                        If you are an administrator interested in driving adoptions
+                        of OpenStax textbooks at your institution, we are here to
+                        support you!
+                    </div>
+                    <div class="more"><a href="/contact?subject=College/University Partnerships">Contact Us</a></div>
                 </div>
-                <div class="more"><a href="/contact?subject=College/University Partnerships">Contact Us</a></div>
             </div>
         </div>
 
