--- a/src/app/pages/allies/allies.scss
+++ b/src/app/pages/allies/allies.scss
@@ -7,14 +7,12 @@ $text-dark2: rgba(0, 0, 0, 0.7);
     line-height: 3rem;
 
     .container {
-        display: flex;
+        display: block;
         margin: 0 auto;
         padding: 0 1.5rem;
         width: 100%;
         height: 100%;
         max-width: $boxed-width;
-        flex-flow: column wrap;
-        flex: 1 100%;
     }
 
     .hero {
@@ -50,9 +48,8 @@ $text-dark2: rgba(0, 0, 0, 0.7);
 
         background-color: color(gray);
         color: color(neutral-lightest);
-        display: flex;
+        display: block;
         font-weight: 500;
-        justify-content: center;
         margin: 0 auto;
         min-height: 10rem;
         position: relative;
@@ -66,6 +63,7 @@ $text-dark2: rgba(0, 0, 0, 0.7);
             flex-flow: row wrap;
             justify-content: center;
             padding-top: 9rem;
+            width: 100%;
         }
 
         .logo {
@@ -89,11 +87,12 @@ $text-dark2: rgba(0, 0, 0, 0.7);
     }
 
     .strips {
+        left: 0;
         margin-bottom: 0;
         position: absolute;
-        top: 0;
-        left: 0;
         right: 0;
+        top: 0;
+        width: 100%;
     }
 
     .blurbs {
@@ -105,12 +104,17 @@ $text-dark2: rgba(0, 0, 0, 0.7);
         padding: 3rem;
 
         .text {
+            align-items: flex-start;
             display: flex;
             flex-direction: column;
-            align-items: flex-start;
+            max-width: 100%;
 
             &.hidden {
                 display: none;
+            }
+
+            p {
+                width: 100%;
             }
         }
 
@@ -129,5 +133,6 @@ $text-dark2: rgba(0, 0, 0, 0.7);
 
     .filter {
         padding: 0.2rem 0;
+        width: 100%;
     }
 }
