Show Home Page after resources have loaded

--- a/src/app/pages/home/home.hbs
+++ b/src/app/pages/home/home.hbs
@@ -1,6 +1,9 @@
 <style scoped>
     @import url(/app/pages/home/home.css);
 </style>
+<div class="loader">
+    <h1>Loading</h1>
+</div>
 <div class="home-page">
     <main id="maincontent">
         <div class="book-banner"></div>
