--- a/src/app/pages/home/education/education.hbs
+++ b/src/app/pages/home/education/education.hbs
@@ -22,9 +22,9 @@
         <div class="links">
             <ul>
                 <li>
-                    <a class="btn btn-large btn-orange higher-ed" href="/higher-ed">
+                    <a class="btn btn-large btn-orange higher-ed" href="/higher-ed#getting-started">
                         <span class="title">Higher Education</span>
-                        <span class="blurb">Peer-reviewed textbooks and digital learning tools</span>
+                        <span class="blurb">Peer-reviewed textbooks and digital learning tools. Get started.</span>
                     </a>
                 </li>
                 <li>
