--- a/src/app/pages/subjects/subjects.scss
+++ b/src/app/pages/subjects/subjects.scss
@@ -108,7 +108,7 @@
         }
 
         .book-category {
-            flex: 1 100%;
+            flex: 1 1 auto;
 
             .subject {
                 color: color(gray);
