Make US History banner fly in/out

--- a/src/app/pages/home/banners/us-history/us-history.hbs
+++ b/src/app/pages/home/banners/us-history/us-history.hbs
@@ -3,27 +3,27 @@
 </style>
 <div class="us-history">
     <div class="container">
-        <div class="john-adams"></div>
-        <div class="sacajawea"></div>
-        <div class="clermont"></div>
-        <div class="book"></div>
+        <div class="john-adams flyin"></div>
+        <div class="sacajawea flyin"></div>
+        <div class="clermont flyin"></div>
+        <div class="book flyin"></div>
 
         <div class="video-banner"></div>
         <video class="video" autoplay>
             <source src="images/home/subjects/us-history/video.mp4" type="video/mp4" />
         </video>
 
-        <div class="square-1"></div>
-        <div class="square-2"></div>
-        <div class="square-3"></div>
-        <div class="square-4"></div>
+        <div class="square-1 flyin"></div>
+        <div class="square-2 flyin"></div>
+        <div class="square-3 flyin"></div>
+        <div class="square-4 flyin"></div>
 
-        <div class="now-i-can">
+        <div class="now-i-can flyin">
             <span>Now I can</span>
             <span class="quote">Travel back in time</span>
         </div>
 
-        <div class="subject-links">
+        <div class="subject-links flyin">
             <ul>
                 <li>
                     <a class="btn btn-large btn-orange explore-subject" href="/details?us-history">
