--- a/src/app/pages/home/home.scss
+++ b/src/app/pages/home/home.scss
@@ -8,6 +8,10 @@
     @include desktop {
         margin-top: -6rem;
     }
+
+    .book-banner {
+        height: 71rem;
+    }
 }
 
 .quote-buckets {
