--- a/src/app/pages/impact/impact.hbs
+++ b/src/app/pages/impact/impact.hbs
@@ -9,7 +9,7 @@
             <div class="student"></div>
             <div class="overlay">
                 <div class="text-block">
-                    <h1 class="header">We measure our success by the impact we make.</h1>
+                    <h1 class="header">We measure our success in access.</h1>
                     <div class="blurb">
                         Since 2012, OpenStax has saved students $66 million and counting by offering free,
                         peer-reviewed textbooks for the highest-enrollment college courses.
