--- a/src/app/pages/home/banners/us-history/us-history.scss
+++ b/src/app/pages/home/banners/us-history/us-history.scss
@@ -13,43 +13,11 @@
     }
 }
 
-@keyframes flyin {
-    from {
-        transform: scale(0);
-        opacity: 0;
-    }
-
-    to {
-        transform: scale(1);
-        opacity: 1;
-    }
-}
-
-@keyframes flyout {
-    from {
-        transform: scale(1);
-        opacity: 1;
-    }
-
-    to {
-        transform: scale(0);
-        opacity: 0;
-    }
-}
-
 .flyin,
 .flyout {
-    animation-duration: 0.5s;
-    animation-name: flyin;
-    animation-iteration-count: 1;
-    animation-direction: normal;
-    animation-fill-mode: forwards;
-    opacity: 0;
-}
-
-.flyout {
-    animation-name: flyout;
-    opacity: 1;
+    @include desktop {
+        opacity: 0;
+    }
 }
 
 .us-history {
@@ -94,7 +62,6 @@
     .square-2,
     .square-3,
     .square-4 {
-        animation-delay: 3.4s;
         background-color: rgba(color(blue), 0.1);
         display: none;
         position: absolute;
@@ -102,6 +69,14 @@
 
         @include desktop {
             display: block;
+            animation: flyin 0.5s 1.4s 1 normal forwards, loop 30s 1.6s normal infinite linear forwards;
+        }
+
+        &.flyout {
+            @include desktop {
+                animation: flyout 0.5s 1 normal forwards;
+                opacity: 1;
+            }
         }
     }
 
@@ -171,12 +146,18 @@
     .sacajawea,
     .john-adams,
     .clermont {
-        animation-delay: 3s;
         display: none;
-        //opacity: 0.7;
 
         @include desktop {
             display: block;
+            animation: flyin 0.5s 1.2s 1 normal forwards, loop 40s 1.4s reverse infinite linear both;
+        }
+
+        &.flyout {
+            @include desktop {
+                animation: flyout 0.5s 1 normal forwards;
+                opacity: 1;
+            }
         }
     }
 
@@ -208,7 +189,6 @@
     }
 
     .book {
-        animation-delay: 2s;
         background-color: color(blue);
         background-image: url('/images/subjects/us-history.svg');
         position: absolute;
@@ -235,6 +215,14 @@
             left: 40%;
             width: 30rem;
             height: 30rem;
+            animation: flyin 0.5s 1s 1 normal forwards;
+        }
+
+        &.flyout {
+            @include desktop {
+                animation: flyout 0.5s 1 normal forwards;
+                opacity: 1;
+            }
         }
     }
 
@@ -273,7 +261,6 @@
     }
 
     .now-i-can {
-        animation-delay: 3.4s;
         background-color: rgba(color(turquoise), 0.85);
         bottom: 15rem;
         color: color(neutral-lightest);
@@ -300,6 +287,14 @@
             width: 59rem;
             height: 9rem;
             font-size: 3.6rem;
+            animation: flyin 0.5s 1.8s 1 normal forwards;
+        }
+
+        &.flyout {
+            @include desktop {
+                animation: flyout 0.5s 1 normal forwards;
+                opacity: 1;
+            }
         }
 
         .quote {
@@ -327,7 +322,6 @@
     }
 
     .subject-links {
-        animation-delay: 3.4s;
         bottom: 1.5rem;
         left: 0;
         position: absolute;
@@ -349,6 +343,14 @@
         @include desktop {
             left: 18.4rem;
             right: auto;
+            animation: flyin 0.5s 1.8s 1 normal forwards;
+        }
+
+        &.flyout {
+            @include desktop {
+                animation: flyout 0.5s 1 normal forwards;
+                opacity: 1;
+            }
         }
 
         ul {
