--- a/src/app/pages/foundation/foundation.scss
+++ b/src/app/pages/foundation/foundation.scss
@@ -8,14 +8,12 @@ $text-black2: rgba(0, 0, 0, 0.7);
     line-height: 3rem;
 
     .container {
-        display: flex;
+        display: block;
         margin: 0 auto;
         padding: 0 1.5rem;
         width: 100%;
         height: 100%;
         max-width: $boxed-width;
-        flex-flow: column nowrap;
-        flex: 1 100%;
     }
 
     .hero {
@@ -98,9 +96,8 @@ $text-black2: rgba(0, 0, 0, 0.7);
         }
 
         .text {
-            display: flex;
-            flex-direction: column;
             align-items: flex-start;
+            display: block;
         }
     }
 }
