--- a/src/app/pages/k-12/k-12.scss
+++ b/src/app/pages/k-12/k-12.scss
@@ -38,9 +38,8 @@
         }
     }
 
-    .buckets {
-        .buckets-section {
-            padding-top: 0;
-        }
+    .buckets-section {
+        padding-top: 8rem;
+        padding-bottom: 8rem;
     }
 }
