--- a/src/app/pages/home/banners/us-history/us-history.scss
+++ b/src/app/pages/home/banners/us-history/us-history.scss
@@ -69,7 +69,7 @@
 
         @include desktop {
             display: block;
-            animation: flyin 0.5s 1.4s 1 normal forwards, loop 30s 1.6s normal infinite linear forwards;
+            animation: flyin 0.5s 1.2s 1 normal ease-in forwards, loop 30s 1.5s normal infinite linear both;
         }
 
         &.flyout {
@@ -150,7 +150,7 @@
 
         @include desktop {
             display: block;
-            animation: flyin 0.5s 1.2s 1 normal forwards, loop 40s 1.4s reverse infinite linear both;
+            animation: flyin 0.5s 1.4s 1 normal ease-in forwards, loop 40s 1.8s reverse infinite linear forwards;
         }
 
         &.flyout {
