Extend loader view and apply to more pages
Added loading-section component, which loader view automatically adds
to its page and removes (be sure to call `super.onRender()` and
`super.onLoaded()` in your view’s `onRender` and `onLoaded`,
respectively)
Modified home page to use updated loading-view
Made Subjects page use loading-view and wait for its Ajax calls to
complete
Made Impact page use loading-view
Made Allies page use loading-view

--- a/src/app/pages/allies/allies.hbs
+++ b/src/app/pages/allies/allies.hbs
@@ -1,13 +1,13 @@
 <style scoped>
     @import url(/app/pages/allies/allies.css);
 </style>
-<div class="hero">
+<div class="hero hidden">
     <div class="container">
         <h1 id="page-title"></h1>
         <p id="page-subhead" class="subhead"></p>
     </div>
 </div>
-<div class="icons">
+<div class="icons hidden">
     {{{strips}}}
     <div class="filter">
         <div class="filter-buttons"></div>
