--- a/src/app/pages/subjects/subjects.hbs
+++ b/src/app/pages/subjects/subjects.hbs
@@ -2,7 +2,7 @@
     @import url(/app/pages/subjects/subjects.css);
     @import url(/app/components/get-this-title/get-this-title.css);
 </style>
-<div class="subjects-page">
+<div class="subjects-page hidden">
     <div class="container" data-manager="page-description"></div>
 
     <div class="books">
