--- a/src/app/pages/home/home.hbs
+++ b/src/app/pages/home/home.hbs
@@ -1,10 +1,7 @@
 <style scoped>
     @import url(/app/pages/home/home.css);
 </style>
-<div class="loader">
-    <h1>Loading</h1>
-</div>
-<div class="home-page">
+<div class="home-page hidden">
     <main id="maincontent">
         <div class="book-banner"></div>
         <span class="scrolldown-chevron"><a href="#education"><i class="fa fa-chevron-down"></i></a></span>
