--- a/src/app/pages/impact/impact.hbs
+++ b/src/app/pages/impact/impact.hbs
@@ -1,7 +1,7 @@
 <style scoped>
     @import url(/app/pages/impact/impact.css);
 </style>
-<div class="impact-page page">
+<div class="impact-page page hidden">
     <main id="maincontent">
         <div class="hero">
             <div class="box-1"></div>
