--- a/src/app/pages/subjects/subjects.scss
+++ b/src/app/pages/subjects/subjects.scss
@@ -3,7 +3,7 @@
 
 .subjects-page {
     .container {
-        display: block;
+        display: flex;
         margin: 0 auto;
         padding: 0 1.5rem;
         width: 100%;
@@ -109,6 +109,7 @@
 
         .book-category {
             flex: 1 1 auto;
+            width: 100%;
 
             .subject {
                 color: color(gray);
@@ -122,6 +123,7 @@
             flex-flow: row wrap;
             justify-content: space-around;
             margin: 0 -1rem;
+            width: 100%;
 
             @include tablet {
                 justify-content: space-between;
