Set href of Account Profile link from settings

--- a/src/app/components/shell/header/header.hbs
+++ b/src/app/components/shell/header/header.hbs
@@ -11,7 +11,7 @@
                 <li class="nav-menu-item"><a href="/contact" role="menuitem">Contact</a></li>
                 <li class="nav-menu-item login"><a href="#" role="menuitem">Login<svg width="0" class="chevron" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 18 30"><title>arrow</title><path d="M12,1L26,16,12,31,8,27,18,16,8,5Z" transform="translate(-8 -1)"/></svg></a>
                     <ul class="dropdown-menu" role="menu" aria-expanded="false" aria-label="User Menu">
-                        <li role="presentation"><a href="http://accounts.openstax.org" role="menuitem" tabindex="-1">Account Profile</a></li>
+                        <li role="presentation"><a data-href-setting="account-href" role="menuitem" tabindex="-1">Account Profile</a></li>
                         <li role="presentation" class="non-faculty"><a href="/faculty-verification" role="menuitem" tabindex="-1">Request instructor access</a></li>
                         <li role="presentation" class="logout"><a href="#" role="menuitem" tabindex="-1">Logout</a></li>
                     </ul>
