Apply loader to About Us and Details
Updated loader to hide/show header and footer, take up entire screen.
Applied loader to About Us and Details pages.

--- a/src/app/pages/about-us/about-us.hbs
+++ b/src/app/pages/about-us/about-us.hbs
@@ -2,7 +2,7 @@
     @import url(/app/pages/about-us/about-us.css);
     @import url(/app/components/remover/remover.css);
 </style>
-<div class="about-us page">
+<div class="about-us page hidden">
     <div class="hero">
         <div class="boxed">
             <h1>About Us</h1>
