--- a/src/app/pages/about-us/about-us.scss
+++ b/src/app/pages/about-us/about-us.scss
@@ -16,6 +16,10 @@
 .about-us {
     background-color: rgba(color(neutral-lighter), 0.2);
 
+    &.hidden {
+        display: none;
+    }
+
     .hero {
         background-color: color(gray);
         color: color(neutral-lightest);
