--- a/src/app/pages/details/details.hbs
+++ b/src/app/pages/details/details.hbs
@@ -2,7 +2,7 @@
     @import url(/app/pages/details/details.css);
     @import url(/app/components/get-this-title/get-this-title.css);
 </style>
-<div class="details-page">
+<div class="details-page hidden">
         <section class="container book-info">
             <img class="book-cover" />
                 <section class="details">
