Fix style for all form pages and hero banners on the site

--- a/src/app/pages/adoption/adoption.hbs
+++ b/src/app/pages/adoption/adoption.hbs
@@ -1,7 +1,7 @@
 <style scoped>
     @import url(/app/pages/adoption/adoption.css);
 </style>
-<div class="hero text-content">
+<div class="subhead text-content">
     <h1>Let us know you’re using OpenStax</h1>
     <p>Our books and their accompanying resources are yours to use, free.</p>
     <p>Help us continue to make high-quality educational materials accessible by
