--- a/src/app/pages/comp-copy/comp-copy.hbs
+++ b/src/app/pages/comp-copy/comp-copy.hbs
@@ -24,7 +24,7 @@
             <input type=hidden name="lead_source" value="Comp Request">
         </div>
 
-        <div class="labeled-inputs row">
+        <div class="labeled-inputs row top-of-form">
             <div class="col">
                 <label>
                     <span>First name</span>
