--- a/src/app/pages/contact-thank-you/contact-thank-you.hbs
+++ b/src/app/pages/contact-thank-you/contact-thank-you.hbs
@@ -1,5 +1,18 @@
 <style scoped>
     @import url(/app/pages/contact-thank-you/contact-thank-you.css);
 </style>
-<h1>Thank you</h1>
-<p>Your message has been sent.</p>
+
+<div class="page-intro">
+    <div class="text-content subhead">
+        <h1>Thank you!</h1>
+        <p>Your message has been sent.</p>
+    </div>
+</div>
+
+<div class="wrapper">
+    {{{strips}}}
+    <div class="text-content labeled-inputs row book-info">
+    {{!--    <div class="text-content add-another">
+        </div> --}}
+    </div>
+</div>
