--- a/src/app/pages/faculty-verification/faculty-verification.hbs
+++ b/src/app/pages/faculty-verification/faculty-verification.hbs
@@ -24,7 +24,7 @@
             <input type=hidden name="OS_Accounts_ID__c" />
         </div>
 
-        <div class="labeled-inputs row">
+        <div class="labeled-inputs row top-of-form">
             <div class="col">
                 <label>
                     First name
