--- a/src/app/pages/finished-no-verify/finished-no-verify.scss
+++ b/src/app/pages/finished-no-verify/finished-no-verify.scss
@@ -4,9 +4,14 @@
 
     .subhead {
         padding-bottom: 8rem;
+
+        a {
+            color: color(yellow);
+        }
     }
 
     .strips {
         margin-bottom: 0;
     }
+
 }
