--- a/src/app/pages/higher-ed/higher-ed.hbs
+++ b/src/app/pages/higher-ed/higher-ed.hbs
@@ -3,7 +3,7 @@
 </style>
 <div class="higher-ed-page page">
     <main id="maincontent">
-        <div class="hero">
+        <div class="hero w-cards">
             <div class="container-wrap">
                 <div class="student"></div>
                 <div class="overlay">
