--- a/src/app/pages/impact/impact.hbs
+++ b/src/app/pages/impact/impact.hbs
@@ -3,7 +3,7 @@
 </style>
 <div class="impact-page page hidden">
     <main id="maincontent">
-        <div class="hero">
+        <div class="hero w-cards">
             <div class="box-1"></div>
             <div class="box-2"></div>
             <div class="student"></div>
