--- a/src/app/pages/interest/interest.hbs
+++ b/src/app/pages/interest/interest.hbs
@@ -1,3 +1,6 @@
+<style scoped>
+    @import url(/app/pages/interest/interest.css);
+</style>
 <div class="text-content subhead">
 <h1>OpenStax College Interest Form</h1>
     <p>
@@ -16,7 +19,7 @@
             <input type=hidden name="lead_source" value="OS Interest Form">
             <input type=hidden name="00NU00000055spw" value="High Interest in Adopting">
         </div>
-        <div class="labeled-inputs row">
+        <div class="labeled-inputs row top-of-form">
             <div class="col">
                 <label>
                     <span>First name</span>
