--- a/src/app/pages/subjects/subjects.scss
+++ b/src/app/pages/subjects/subjects.scss
@@ -17,7 +17,7 @@
     }
 
     .container[data-manager="page-description"] {
-        padding: 6rem 1.5rem;
+        padding: 6rem 1.5rem 9rem;
 
         @include desktop {
             text-align: center;
