--- a/src/app/pages/adoption/adoption.scss
+++ b/src/app/pages/adoption/adoption.scss
@@ -1,21 +1,28 @@
 @import 'variables';
+@import 'mixins';
 
 .adoption-form {
     .hero {
-        background-color: color(deep-green);
-        color: color(neutral-lightest);
 
         h1 {
             color: inherit;
         }
 
-        a {
-            color: color(gold);
-        }
-
     }
 
-    .labeled-inputs.row.top-of-form {
+    .instructions {
+        color: #ccc;
+        font-size: 1.4rem;
+        font-weight: 300;
+        padding: 0 1.5rem;
+        text-align: center;
+
+        @include phone {
+            text-align: left;
+        }
+    }
+
+    .top-of-form {
         padding-top: inherit;
     }
 }
