--- a/src/app/pages/allies/allies.hbs
+++ b/src/app/pages/allies/allies.hbs
@@ -4,7 +4,7 @@
 <div class="hero hidden">
     <div class="container">
         <h1 id="page-title"></h1>
-        <p id="page-subhead" class="subhead"></p>
+        <p id="page-subhead"></p>
     </div>
 </div>
 <div class="icons hidden">
