--- a/src/app/pages/finished-no-verify/finished-no-verify.hbs
+++ b/src/app/pages/finished-no-verify/finished-no-verify.hbs
@@ -1,10 +1,26 @@
-<div class="finished-no-verify no-style page">
-    {{{strips}}}
-    <div class="boxed">
-        <h1>Thanks.</h1>
+<style scoped>
+    @import url(/app/pages/finished-no-verify/finished-no-verify.css);
+</style>
+<div class="page-intro">
+    <div class="text-content subhead">
+        <h1>Your new account has been created. Thank you for joining the OpenStax community!</h1>
         <p>
-            If you need faculty-only resources, you will need to get your account
-            verified.
+            Do you need access to instructor-only resources?  <a href="/finish-profile"> Get your account verified</a>
         </p>
     </div>
 </div>
+
+<div class="wrapper">
+    {{{strips}}}
+    <div class="text-content labeled-inputs row book-info">
+
+        <div class="text-content add-another">
+           <h2>
+                Have you adopted an OpenStax book?
+            </h2>
+            <a href="/adoption" title="adopt a book" class="btn">Adopt a book</a>
+            <a href="/subjects" title="explore our books" class="btn btn-secondary">Explore our books</a>
+        </div>
+    </div>
+</div>
+
