--- a/src/app/pages/finished-verify/finished-verify.hbs
+++ b/src/app/pages/finished-verify/finished-verify.hbs
@@ -1,12 +1,26 @@
-<div class="finished-verify no-style page">
-    {{{strips}}}
-    <div class="boxed">
-        <h1>Thanks.</h1>
+<style scoped>
+    @import url(/app/pages/finished-verify/finished-verify.css);
+</style>
+
+<div class="page-intro">
+    <div class="text-content subhead">
+        <h1>Thank you for applying for an instructor account!</h1>
         <p>
-            We manually verify that you are a faculty member and this process can take
-            up to three business days. You will receive an email notification once we
-            have confirmed your faculty status. Until then, you won’t be able to
-            download faculty-only materials.
+            We manually verify all instructor account requests to ensure that educator resources stay in the right hands, so we’ll email you in the next 3 to 4 business days about your approval. Once approved, you will be able to access all of our instructor-only resources.
         </p>
+    </div>
+</div>
+
+<div class="wrapper">
+    {{{strips}}}
+    <div class="text-content labeled-inputs row book-info">
+
+        <div class="text-content add-another">
+           <h2>
+                Have you adopted an OpenStax book?
+            </h2>
+            <a href="/adoption" title="adopt a book" class="btn">Adopt a book</a>
+            <a href="/subjects" title="explore our books" class="btn btn-secondary">Explore our books</a>
+        </div>
     </div>
 </div>
