--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -154,7 +154,7 @@ sup {
     display: flex;
     flex-flow: column nowrap;
     max-width: $boxed-width;
-    margin: 0 auto 4rem;
+    margin: 0 auto;
     padding: 0 1.5rem;
     width: 100%;
 }
@@ -167,18 +167,32 @@ sup {
     }
 }
 
-.subhead {
-    font-weight: 100;
 
-    @include desktop {
-        text-align: center;
-        max-width: 80%;
-        margin-left: auto;
-        margin-right: auto;
+
+.subhead { // for banner with text only
+    padding: 8rem 1.5rem;
+    font-weight: normal;
+    display: flex;
+    align-items: center;
+    width: 100%;
+    max-width: $boxed-width;
+    text-align: center;
+
+    @include phone {
+        text-align: left;
     }
 
     h1 {
         line-height: 1;
+        margin: 0;
+    }
+
+    p {
+        max-width: 80%;
+
+        @include phone {
+            max-width: 100%;
+        }
     }
 
     a {
@@ -204,6 +218,7 @@ sup {
 @import 'components/filter-buttons';
 @import 'components/forms';
 @import 'components/headers';
+@import 'components/hero';
 @import 'components/option-list';
 @import 'components/intro';
 @import 'components/responsive';
